<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/folderNameEditView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/addFolderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@android:string/ok" />
</LinearLayout>